- Added mealspecifics to team messages (test still open)